--- a/AvatarCatan2.2/app/src/main/res/layout/content_battle_ground.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_battle_ground.xml
@@ -1,82 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ActivityBattleGround"
-    tools:showIn="@layout/activity_battle_ground">
+    tools:showIn="@layout/activity_battle_ground"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="#24beaf">
+
+        <Button
+            android:text="Yes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/button15"
+            android:layout_weight="1.9"
+            android:rotation="180"
+            android:background="@android:color/holo_blue_light"
+            android:visibility="invisible" />
+
+        <TextView
+            android:text="Attacking Army"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/textView"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="#24beaf"
+            android:textSize="20sp"
+            android:textColor="#000"
+            android:rotation="180" />
+
+        <Button
+            android:text="No"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/button13"
+            android:layout_weight="1.9"
+            android:rotation="180"
+            android:visibility="invisible"
+            android:background="#fd6767" />
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:background="#fd6767">
+        android:layout_height="wrap_content"
+        android:layout_weight="25">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="5"
+        <GridView
+            android:layout_weight="1"
+            android:rotation="180"
             android:background="#ffffff"
-            android:layout_marginBottom="10dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:text="Offensive Army"
-                android:id="@+id/textView"
-                android:rotation="180"
-                android:background="#24beaf"
-                android:gravity="center"
-                android:textSize="25dp"
-                android:layout_weight="6" />
-
-            <GridView
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:id="@+id/gridView"
-                android:clickable="true"
-                android:numColumns="5"
-                android:rotation="180"
-                android:stretchMode="columnWidth"
-                android:layout_weight="1" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="5"
-            android:background="#ffffff"
-            android:layout_marginTop="10dp">
+            android:layout_height="match_parent"
+            android:id="@+id/gridView"
+            android:clickable="true"
+            android:numColumns="5"
+            android:stretchMode="columnWidth"
+            />
 
-            <GridView
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:id="@+id/gridView2"
-                android:clickable="true"
-                android:numColumns="5"
-                android:stretchMode="columnWidth"
-                android:layout_weight="1" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/textView15"
+            android:layout_weight="1.8"
+            android:gravity="center"
+            android:background="#fd6767"
+            android:text="^^^ Turn Victory"
+            android:textSize="25sp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:text="Defending Army"
-                android:id="@+id/textView4"
-                android:background="#000000"
-                android:gravity="center"
-                android:textColor="#24beaf"
-                android:textSize="25dp"
-                android:layout_weight="6" />
-
-        </LinearLayout>
-
+        <GridView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/gridView2"
+            android:clickable="true"
+            android:numColumns="5"
+            android:stretchMode="columnWidth"
+            />
     </LinearLayout>
-</RelativeLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="#000">
+
+        <Button
+            android:text="No"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/button16"
+            android:layout_weight="1.9"
+            android:elevation="0dp"
+            android:background="#fd6767"
+            android:visibility="invisible" />
+
+        <TextView
+            android:text="Defending Army"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/textView4"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textColor="#24beaf"
+            android:textSize="20sp" />
+
+        <Button
+            android:text="Yes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/button14"
+            android:layout_weight="1.9"
+            android:background="@android:color/holo_blue_light"
+            android:visibility="invisible" />
+    </LinearLayout>
+</LinearLayout>
