--- a/AvatarCatan2.2/app/src/main/res/layout/content_battle_ground.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_battle_ground.xml
@@ -17,11 +17,11 @@
         android:background="#24beaf">
 
         <Button
-            android:text="Yes"
+            android:text="Continue"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/button15"
-            android:layout_weight="1.9"
+            android:layout_weight="3"
             android:rotation="180"
             android:background="@android:color/holo_blue_light"
             android:visibility="invisible" />
@@ -30,23 +30,16 @@
             android:text="Attacking Army"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/textView"
+            android:id="@+id/attArmyMain"
             android:layout_weight="1"
-            android:gravity="center"
             android:background="#24beaf"
             android:textSize="20sp"
             android:textColor="#000"
-            android:rotation="180" />
-
-        <Button
-            android:text="No"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/button13"
-            android:layout_weight="1.9"
             android:rotation="180"
-            android:visibility="invisible"
-            android:background="#fd6767" />
+            android:gravity="left|center"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -67,15 +60,44 @@
             android:stretchMode="columnWidth"
             />
 
-        <TextView
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/textView15"
             android:layout_weight="1.8"
-            android:gravity="center"
-            android:background="#fd6767"
-            android:text="^^^ Turn Victory"
-            android:textSize="25sp" />
+            android:background="#000">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/defViewInfo"
+                android:layout_weight="1"
+                android:gravity="left|center"
+                android:background="#fd6767"
+                android:textSize="17sp"
+                android:paddingLeft="5dp" />
+
+            <TextView
+                android:text="Your Turn"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/centerText"
+                android:layout_weight="1.7"
+                android:gravity="center"
+                android:background="#fd6767"
+                android:layout_margin="3dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/attViewInfo"
+                android:layout_weight="1"
+                android:gravity="left|center"
+                android:background="#fd6767"
+                android:textSize="17sp"
+                android:rotation="180"
+                android:paddingLeft="5dp" />
+        </LinearLayout>
 
         <GridView
             android:layout_width="match_parent"
@@ -95,32 +117,24 @@
         android:layout_weight="1"
         android:background="#000">
 
-        <Button
-            android:text="No"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/button16"
-            android:layout_weight="1.9"
-            android:elevation="0dp"
-            android:background="#fd6767"
-            android:visibility="invisible" />
-
         <TextView
             android:text="Defending Army"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/textView4"
+            android:id="@+id/defArmyMain"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="left|center"
             android:textColor="#24beaf"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp" />
 
         <Button
-            android:text="Yes"
+            android:text="Continue"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/button14"
-            android:layout_weight="1.9"
+            android:layout_weight="3"
             android:background="@android:color/holo_blue_light"
             android:visibility="invisible" />
     </LinearLayout>
