--- a/AvatarCatan2.2/app/src/main/res/layout/grid_block.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/grid_block.xml
@@ -40,8 +40,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="[BLOCKING]"
-        android:id="@+id/blocking"
+        android:id="@+id/status"
         android:gravity="center"
         android:textSize="10dp"
         android:textColor="#fea01c" />
